# workshops

./: .gitignore  LICENSE  README.md  pyproject.toml  run-singularity.sh  run.sh  test.py
MQPU-MGPU/: Q-RBM-mgpu.py  fuse_job_script.sh  ghz.py  mQpu-mGpu.ipynb  mgpu_ghz.py  observe-qml-1gpu.py  observe-qml-mnmgpu.py  observe-qml-multigpu.py  observe-qml-remote-mqpu.py
Purdue-May-2024/: cudaq-introduction.ipynb  mgpu-example.py  mqpu_example.py
VQE-GQE/: 29925227-aba2-405d-ab9e-4503579dffcc.hdf5  VQE-GQE.ipynb  c2h4-vqe_24q.py  gptqe_model.pptx  lib_instruction.txt  vqe-parameter-shift.py  vqe-scipy.py  vqe_built_in_opt.py  water-active-space.py
batch_scripts/: batch_py_nvidia-mqpu.sh  batch_py_nvidia.sh  job_script.sh
cpp/: expectation_values.cpp  kernel.cpp  static_kernel.cpp
cpu-gpu/: QAOA-molecular-docking.py  QNN-1gpu.py
cudaq-intro/: 1_single_qubit.py  2_multi_qubits.py  3_multi_control.py  4_bell.py  5_sampling.py  6_mid_circuit.py  7_spin_operator.py  8_expectation.py  9_asynchronous.py  cudaq-basic.ipynb
gate-fusion/: c2h4-24q.py
multi-GPU/: mgpu_ghz.py
multi-QPU/: MRQKS.py  QNN-mgpu.py
notebooks/: bernstein_vazirani.ipynb  bv-with-host-cpu-memory.py  cudaq-introduction.ipynb  cudaq_introduction.ipynb  cudaq_target.ipynb  hadamard_test.ipynb  ir.ipynb  krylov.ipynb  vqe.ipynb
remote-mQPU/: QNN-remote-mQPU.ipynb
scripts/: cudaq_introduction.py  cudaq_target.py  hadamard_test.py  ir.py  vqe.py
tutorial-examples/: MRQKS_LIH.ipynb  QML-classification_1gpu.ipynb  QML-classification_multigpu.ipynb  UCCSD_VQE.ipynb  get_amp.py  (+2 more)
(+69 files in other folders)
